fix: Dialog Hero Icon missing color

--- a/src/scss/components/Dialog.scss
+++ b/src/scss/components/Dialog.scss
@@ -269,6 +269,7 @@
 
       .dialog__hero-icon {
         display: block;
+        color: var(--secondary);
       }
     }
 
